# PMI_analysis

./: README.md  pyproject.toml  requirements.txt
example/: run_analysis_trajectories.py
src/pmi_analysis/: analysis_trajectories.py
